BEEBEEP (Secure Lan Messanger) - CHANGELOG - (c) Marco Mastroddi

BeeBEEP 5.6.1
- Updated to Qt 5.9.8 (Windows)

BeeBEEP 5.6.0
- Now the Avatar icon border in the chat right panel will be yellow if the messages have not yet been 
  displayed in the user's chat.
- If option "Always open chat on new message" is enabled and "Raise previously opened 
  chat on new message" is disabled, the window is now opened minimized to show icon
  blinking on taskbar.
- Added "AllowEditNickname" option in beebeep.rc
- Fixed a bug on saving option "Recognize user by"
- Added "DisableCreateMessage" option in beebeep.rc
- Added "ActiveWindowOpacityLevel" and "InactiveWindowOpacityLevel" option for chat window
- Added "BackgroundColor", "DefaultTextColor" and "SystemTextColor" option for chat window
- Added "EnableDefaultChatNotifications" option
- Added "Regenerate HASH code" button in Edit Profile window (to easily avoid "same HASH errors")
- Added notification a few days before user's birthday event (birthday is now saved with user data)
- Added flag "Important!!" to chat message in "create message" window (raise the receiver chat window on top)
- Added "DisableMenuSettings" option in beebeep.rc
- Added "UseMessageTimestampWithAP" option (timestamp can be showed with am/pm suffix)
- Added "BroadcastToOfflineUsers" option
- Added "IP Multicast TTL" option
- Added "Use the dark theme" option (beta)
- Added "RaiseOnNewFileTransfer" option

BeeBEEP 5.4.2
- Removed option "On close minimize on tray" for MacOSX
- Added more debug messages on user recognition
- Added "Autoresponder" when user send messages in group where he is not member
- Fixed bug: duplicate first message on chat window

BeeBEEP 5.4.1
- Fixed bug: "Transfer completed" message is not showed in chat
- File sharing window now save its geometry on close
- Create message window now save its geometry on close
- Added option "Enable maximize button"
- Groups can be created also with just one member (and you)

BeeBEEP 5.4.0